@@ -1,47 +1,525 @@
-@import url("tei.css");
+/* teic.css */
+
+
+/* main layout */
+  
+#col1{
+   width: 20%;
+   background: #ffffff;
+   margin: 0;
+   margin-top: 10px;
+   color: #000066;
+   padding: 5px;
+   position : absolute;
+   float: left;
+   border-style: solid;
+   border-width: 1;
+   border-color: red;
+}
+
+#col2{
+   background: #ffffff;
+   color: #333333;
+   border-style: solid;
+   border-width: 1;
+   border-color: black;
+   margin: 0;
+   margin-top: 10px;
+   padding: 5px ;
+   left: 22%;
+   width: 51%;
+   position : absolute;
+}
+
+#col3{
+   width: 24%;
+   left: 75%;
+   color: #000066;
+   background: #ffffff;
+   border-style: solid;
+   border-width: 1;
+   border-color: red;
+   margin: 0;
+   margin-top: 10px;
+   padding: 5px;
+   position : absolute;
+   float: right;
+}
+
+#lh-col{
+   width: 16%;
+   color: black;
+   margin: 0pt;
+   margin-right: 10pt;
+   padding: 5px;
+   background-color: #ffffff;
+   position : relative;
+   float: left;
+}
+
+#rh-col{
+   background-color: #ffffff;
+   color: #333333;
+   margin: 2pt;
+   padding: 5px ;
+   left: 17%;
+   width: 81%;
+   border: solid  black 1pt;
+   position : absolute;
+}
+
+.bannerright {
+   position : absolute;
+   right : 5px;
+   color: black;
+   font-family : Arial:hover, Helvetica, sans-serif;
+   font-size : 0.8em;
+   font-weight : bold;
+   text-decoration: none;
+}
+
+body.pagetable {
+   background-color:  #ffffcc; 
+   color: black;
+}
+
+td.maintext p {
+   font-family: sans-serif;
+}
+td.maintext {
+   background-color: white;
+   font-family: sans-serif;
+   color:  black;
+   padding-left:  6pt; 
+   padding-right:  6pt; 
+    }
+
+body.simple {
+   background-color: white;
+   color: black;
+   margin: 10pt;
+}
+
+body{
+   margin: 0;
+   padding:0;     
+   color: black;
+}
+ 
+#hdr{
+   width: auto;
+   margin: 0;
+   padding-top: 1pt;
+   padding-bottom: 1pt;
+   border:0;
+   color: yellow;
+   background: url("/logos/TEI-glow.png");
+   background-repeat : no-repeat;
+   overflow : inherit;
+}
+
+
+/* navigation bar */
+#hdr2{
+   width: auto;
+   background-color: #0082EF;
+   color : #223377;
+   font-weight: bold;
+   padding-left : 15px;
+   padding-bottom : 2px;
+   padding-top : 2px;
+   padding-right : 5px;
+   font-family: sans-serif;
+   font-size:smaller;
+   border-top: solid black 1pt; 
+   border-bottom: solid black 1pt; 
+}
+
+/* bread crumbs */
+#hdr3{
+   width: auto;
+   color: black;
+   background-color : white;
+   padding-left : 5px;
+   padding-bottom : 2px;
+   padding-top : 2px;
+   padding-right : 5px;
+   font-family: arial,sans-serif; 
+   font-weight : bold;
+   font-size: smaller;
+}
+
+
+/* headings */
+h1 { 
+   font-weight: bold; 
+   font-size: x-large; 
+   color: #223377;
+}
+
+
+h2 { font-size: 16pt; 
+   margin-top: large;
+   font-weight: bold;
+   font-family: arial, sans-serif;
+   color: #223377;
+}
+
+h3 {      font-size: larger; 
+   color: #C63904;
+   font-weight: bold; 
+   font-family: arial, sans-serif;
+   font-style: italic;
+}
+
+
 h1.maintitle {
-	margin-left: 170px;
-	font-family: arial,sans-serif; 
-	font-weight: bold; 
-	color: black;
-	background-color: white;
-	bottom: 5px;
+   color: #222E44; 
+   margin-left: 100px;
+   font-family: arial,sans-serif; 
+   font-weight: bold; 
+   margin-bottom: 5px;
 }
 
 h2.subtitle {
-	color: black;
-	margin-left: 170px;
-	background-color: white;
-	font-family: arial,sans-serif; 
-	font-weight: bold; 
+   color: #222E44; 
+   margin-bottom: 15px;
+   margin-left: 100px;
+   font-family: arial,sans-serif; 
+   font-weight: bold; 
+
+}
+.skiplinks{
+   font-family: arial, sans-serif; 
+   color: black;
+   font-weight : bold;
+   font-size : 0.8em;
+  text-decoration: none;
+  padding-right : 15px;
+}
+a.skiplinks{
+   font-family: arial,sans-serif; 
+   color: black;
+   font-weight : bold;
+   font-size : 0.8em;
+   text-decoration: none;
+   padding-right : 15px;
 }
 
-td.bgimage {
-  color: white;
-  background-image: url("jaco001d.gif");
-  width: 90%;
-  background-repeat: no-repeat;
+.footer
+{text-align : center;
+   font-family: arial,sans-serif; 
+   font-size : 0.8em;}
+
+.hide{
+   display : none;
 }
 
+.tocontent{
+   color : #000066;
+   display : none;
+}
 
-body{
- background-color: white;
- color: black;
- }
-	 
-#hdr{
- color: black;
- background-color : white;
- }
+.framestdlink {
+   color: red;
+   font-size: smaller; 
+   font-weight: bold; 
+}
 
+/* linking of all kinds */
 
-#lh-col{
- background: white;
- color: black;
- }
+a.breadcrumb{
+   color: black;
+   text-decoration: none;
+   padding-right : 5px;
+}
 
-a.toclist:visited,
-a.toclist:link
+ul.breadcrumb
 {
-	color: black;
+	display: inline;
+	font-size: 1.1em;
+}
+
+ul.breadcrumb li
+{
+	padding-left: 12px;
+	padding-right: 5px;
+	display: inline;
+	color: #000;
+	background: url(/images/rightarrow.gif);
+	background-repeat: no-repeat;
+	background-position: left;
+}
+
+
+a.framestdlink
+{
+   font-size: small; 
+   font-weight: bold; 
+   text-decoration: none;
+   font-family : Arial,  sans-serif;
+}
+
+
+a:hover
+{
+   text-decoration: underline;
+}
+
+
+a.navbar:link
+{
+   color: white;
+   text-decoration: none;
+}
+
+a.navbar:visited
+{
+   color: white;
+   text-decoration: none;
+}
+
+a.navbar:hover {
+   color: white;
+   text-decoration: underline;
+}
+
+a.inlinetoc:link,a.inlinetoc:visited
+{
+   color: #7a7a7a;
+   font-size: smaller; 
+   text-decoration: none;
+}
+
+a.inlinetoc:hover
+{
+   color: #7a7a7a;
+   font-size: smaller; 
+   text-decoration: underline;
+}
+
+a.inlinetoc-this:visited,a.inlinetoc-this:link
+{
+   font-size: smaller; 
+   color: black;
+   font-weight: bold; 
+   text-decoration: underline;
+}
+
+a.inlinetoc-sub:visited,a.inlinetoc-sub:link
+{
+   text-decoration: none;
+   color: black;
+   font-weight: normal;
+   font-size: smaller; 
+}
+
+/* misc */
+.plain { 
+   font-weight: bold; 
+   text-decoration: none;     
+   font-size: 100%;
+   font-family: sans-serif;
+   color: #C63904 }
+
+.TEIgi {
+    text-decoration: none;
+   color: #ff6600;
+}
+
+.WWPgi { text-decoration:none;
+   color: green;
+}
+
+.small { font-size: 8pt; 
+   font-family: "Arial";
+   color: #9F9F9F;
+}
+
+.label    {
+   font-weight: bold; 
+   background-color: #AAAAAA;
+}
+
+tr.label td {   
+   font-weight: bold; 
+   background-color: #AAAAAA; 
+}
+
+
+pre {
+   margin-left: 1em;
+}
+
+pre.eg {
+   font-size: small
+}
+
+
+table.wovenodd td,p.wovenodd {
+   background-color: white;
+}
+div.inlinetoc {
+      color: #7a7a7a;
+      text-align: center;
+      margin-top: 10pt; 
+      padding-right: 16pt;
+      padding-left: 16pt;
+}
+
+
+/* table of contents in left-hand column */
+
+span.toclist{
+   font-size: smaller; 
+   font-family: sans-serif;
+   font-weight: bold;
+}
+
+p.toclist {
+   font-family: sans-serif;
+  margin-left: 1em; 
+  margin-top: 1pt; 
+  margin-bottom: 2pt; 
+  text-indent: -1em;
+}
+
+p.toclist-this {
+   font-family: sans-serif;
+  margin-left: 1em; 
+  margin-top: 1pt; 
+  margin-bottom: 2pt; 
+  text-indent: -1em;
+   font-size: small;   
+  font-weight: bold ;
+  color: red;
+}
+
+p.toclist-sub {
+   font-family: sans-serif;
+  margin-left: 2em; 
+  margin-top: 1pt; 
+  margin-bottom: 2pt; 
+  text-indent: -1em
+}
+
+a.toclist:visited,a.toclist:link
+{
+   font-size: small; 
+   font-weight: bold; 
+   color: #223377;
+   text-decoration: none;
+}
+
+a.link_xref:hover
+{
+   color: blue;
+   text-decoration: underline;
+}
+a.link_xref:visited,a.link_xref:link
+{
+   color: #223377;
+   text-decoration: underline;
+}
+
+
+a.toclist:hover
+{
+   font-size: small; 
+   font-weight: bold; 
+   color: #222E44;
+   text-decoration: underline;
+}
+
+a.toclist-this:visited,a.toclist-this:link {  
+   text-decoration: none;     
+   font-weight: bold;
+   color: #cc99cc; 
+}
+
+a.toclist-sub:visited ,a.toclist-sub:link
+{
+   text-decoration: none;
+   color: #6600ff;       
+   font-weight: bold; 
+   font-size: small; 
+}
+
+a.toclist-sub:hover
+{
+   text-decoration: underline;
+   color: #6600ff;       
+   font-weight: bold; 
+   font-size: small; 
+}
+
+/* notes */
+div.notes {
+	  margin: 6pt;
+	  font-size: smaller;
+}
+div.noteHeading {
+	  margin-top: 9pt;
+	  margin-bottom: 3pt;
+	  border: 0;
+	  border-top: 1pt;
+	  border-style: solid;
+	  padding-top: 6pt;
+	  font-size: larger;
+	  font-weight: bold;
+	  }
+
+div.note {
+	  margin-left: 1em; 
+	  margin-bottom: 2pt; 
+	  text-indent: -1em;
+}
+
+/* images */
+img.display {
+	    margin-top: 10pt;
+	    margin-bottom: 10pt;
+	    display: block;
+}
+
+p.caption {
+	  font-style: italic;
+}
+
+p.rss {
+  margin-top: 1pt; 
+  margin-bottom: 2pt; 
+  font-size: smaller;
+  color: black;
+	}
+	
+ul.rss {
+  margin: 0; 
+  padding: 0;
+  list-style: none;
+}
+li.rss {
+  font-size: smaller;
+  list-style: none;
+  display: block;
+  margin-left: 0.5em; 
+  margin-top: 1pt; 
+  margin-bottom: 2pt; 
+  text-indent: -0.5em;
+	}
+	
+a {
+	color: #223377;
+}
+
+p.heading { font-size: 18pt; 
+   margin-top: large;
+   font-weight: bold; 
+   color: #C63904;
+}
+
+.floatimage {
+	float : left;
+	margin-right : 6px;
+	vertical-align : top;
 }
